keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wipp-keycloak
  labels:
    component: wipp-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wipp-keycloak
  template:
    metadata:
      labels:
        component: wipp-keycloak
    spec:
      containers:
      - args:
        - -b 0.0.0.0 -Dkeycloak.import=/opt/jboss/keycloak/imports/realm.json
        image: quay.io/keycloak/keycloak:11.0.2
        name: keycloak
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
        volumeMounts:
        - name: keycloak-realm-volume
          mountPath: /opt/jboss/keycloak/imports/realm.json
          subPath: realm.json
      volumes:
      - name: keycloak-realm-volume
        configMap:
          name: keycloak-realm-config
