keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wipp-keycloak
  labels:
    component: wipp-keycloak
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    component: wipp-keycloak
