postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-keycloak
spec:
  type: ClusterIP
  selector:
    component: postgres-keycloak
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-keycloak
  template:
    metadata:
      labels:
        component: postgres-keycloak
    spec:
      volumes:
        - name: postgres-keycloak
          persistentVolumeClaim:
            claimName: postgres-keycloak-pvc
      containers:
        - name: postgres
          image: postgres:9.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-keycloak
              mountPath: /var/lib/postgresql/data
              subPath: postgres
